@@ -26,6 +26,7 @@ Import-Package: com.openexchange.ajax,
  com.openexchange.groupware.contexts.impl,
  com.openexchange.groupware.infostore,
  com.openexchange.groupware.ldap,
+ com.openexchange.groupware.notify.hostname,
  com.openexchange.groupware.userconfiguration,
  com.openexchange.html,
  com.openexchange.i18n,
@@ -36,6 +37,7 @@ Import-Package: com.openexchange.ajax,
  com.openexchange.publish.helpers,
  com.openexchange.publish.interfaces,
  com.openexchange.publish.tools,
+ com.openexchange.server,
  com.openexchange.session,
  com.openexchange.templating,
  com.openexchange.tools.encoding,
