@@ -1,3 +1,7 @@
+* 2014-10-01 - thorben.betten@open-xchange.com
+
+ - Fix for bug 34710: Pass host name from HostnameService to template
+
 * 2014-09-30 - steffen.templin@open-xchange.com
 
  - Fix for bug 34628: Distribution lists are not returned as auto-complete results in mail search anymore.
@@ -5,7 +9,7 @@
 * 2014-09-30 - thorben.betten@open-xchange.com
 
  - Fix for bug 34676: Reviewed caching behavior and settings. Optimized to avoid superfluous querying of database service
- 
+
 * 2014-09-29 - thorben.betten@open-xchange.com
 
  - Fix for bug 34668: Special handling for Windows IE 11 Browser in session management
